Add Registry runtime auto-registration
