# docs/site/api/openapi/pra-gateway-management-v1.json
@@ -953,6 +953,54 @@
         ]
       }
     },
+    "/v1/pra/gateway/registry": {
+      "get": {
+        "operationId": "registry_state_v1_pra_gateway_registry_get",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          }
+        },
+        "security": [
+          {
+            "HTTPBearer": []
+          }
+        ],
+        "summary": "Registry State",
+        "tags": [
+          "registry"
+        ]
+      }
+    },
+    "/v1/pra/gateway/registry/register": {
+      "post": {
+        "operationId": "registry_register_v1_pra_gateway_registry_register_post",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            },
+            "description": "Successful Response"
+          }
+        },
+        "security": [
+          {
+            "HTTPBearer": []
+          }
+        ],
+        "summary": "Registry Register",
+        "tags": [
+          "registry"
+        ]
+      }
+    },
     "/v1/pra/gateway/resources": {
       "get": {
         "operationId": "resources_v1_pra_gateway_resources_get",
